--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -105,7 +105,7 @@
 
         document.getElementById('create-form').innerHTML = '<form onsubmit="handleFormSubmit(event);createForm()" id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >'
             + '{% csrf_token %}'
-                +'<label>Select a Display Page - Then Select Name</label>'
+                +'<label>Required Fields: Display Page, Name, Price</label>'
                 + '<select name="type" id="id_type" onchange="getNames(); getSizes()">'
                     +'<option value="0" selected >Choose Display Page</option>'
                     +'<option value="sport_rigs">Sport Rigs</option>'
@@ -115,15 +115,29 @@
                     +'<option value="javelin_odyssey">Javelin-Odyssey</option>'
                     +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
+                +'<hr>'
+                + '<label>Select a Name:</label>'
                 +'<select name="name" required id="id_name" onchange="setNameDescription()">'
                     +'<option value="" selected>**Display Page Required**</option>'
                 + '</select>'
-                  +'<label for="due_date">Due Date: </label>'
+                    +'<hr>'
+                  +'<label for="due_date">Serial Number: (default is TBD) </label>'
                   +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
+                    + '<hr>'
+                    +'<label>Enter a Due Date:</label>'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
+                + '<hr>'
                 +'<select name="size" id="id_size" onchange="setSizeDescription()">'
                     +'<option id="" value="" selected>**Name/Type Required**</option>'
                 + '</select>'
+                +'<hr>'
+                +'<label for="po_number">Enter a PO #:</label>'
+                +'<input type="text" name="po_number" maxlength="50" id="id_po_number" placeholder="Enter PO Number/Date">'
+                +'<hr>'
+                + '<label for="price">Price is Required:</label>'
+                +'<input type="number" name="price" required="" id="id_price" placeholder="Price**">'
+                +'<hr>'
+                +'<label for="description">Description:</label>'
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
                     + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
                 +'<hr>'
@@ -137,20 +151,20 @@
                 {% endfor %}
                 +'</select>'
                 +'<hr>'
-                +'<input type="text" name="po_number" maxlength="50" id="id_po_number" placeholder="Enter PO Number/Date">'
                 +'<select name="confirmation_r" id="id_confirmation_r">'
                     +'<option value="" selected>Select a Confirmation Report</option>'
                     {% for x in confirm %}
                         +'<option value="{{ x.id }}">{{ x.key }}</option>'
                     {% endfor %}
                 +'</select>'
-                +'<input type="number" name="price" required="" id="id_price" placeholder="Price**">'
+                +'<hr>'
                 +'<select name="picture" id="id_picture">'
                     +'<option value="" selected>Select a Picture</option>'
                     {% for x in pict %}
                         +'<option value="{{ x.id }}">{{ x.key }}</option>'
                     {% endfor %}
                 +'</select>'
+                +'<hr>'
                 +'<button class="submit-new" type="submit">Create New Item</button>'
             +'</form>'
         +'<p>* RED Border/Black Background = Required Fields *</p>'
