organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -139,7 +139,8 @@
                 +'<hr>'
                 +'<label for="description">Description:</label>'
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
-                    + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
+                    + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)' +
+                        '\nEnter a Price\nSelect and Enter Any Other Form Fields\nPress the <Create New Item> Button Below"></textarea>'
                 +'<hr>'
                   + '<label for="in_stock">IN STOCK</label>'
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
