organized build js files

--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -397,3 +397,11 @@ button {
     margin-top: 5px;
     color: white;
 }
+
+#build-create-customer-btn {
+    background: fuchsia;
+}
+
+#build-create-address-btn {
+    background: fuchsia;
+}
