--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -36,7 +36,7 @@
                 </div>
                 <div id="sold-update-btn-group" class="none">
                     <button id="" class="btnchanger" onclick="">Item select</button>
-                    <button id="" class="btnchanger" onclick="">Create a New Customer</button>
+                    <button id="build-create-customer-btn" class="btnchanger" onclick="">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="">Customer select</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
                     <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
@@ -47,7 +47,7 @@
                     <button id="" class="btnchanger" onclick="">Sold Info Select</button>
                     <button id="" class="btnchanger" onclick="">Customer select</button>
                     <button id="" class="btnchanger" onclick="">Update Shipping Address</button>
-                    <button id="" class="btnchanger" onclick="">Create New Shipping Address</button>
+                    <button id="build-create-address-btn" class="btnchanger" onclick="">Create New Shipping Address</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
                     <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
                     <button id="" class="btnchanger" onclick="">Sold info 2 select</button>
