--- a/users/templates/user.html
+++ b/users/templates/user.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/users.css' %}">
 <a href="/manager/builder/">Build a New Item</a>
-<a href="/admin/backend/item">Main Admin Page</a>
+<a href="/admin/backend/">Main Admin Page</a>
 <a href="/manager/media/">Media Manager</a>
 <a href="/">Website Home</a>
 <a href="/admin/backend/message/">Contact Requests</a>
