organized build js files

--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -41,14 +41,14 @@
         </div>
         <div id="filter" class="display-opac">
             <div class="grid">
-            <div class="filter"><a href="/canopies/#div-top">Top</a></div>
-            <div class="filter"><a href="/canopies/#div-230">230's</a></div>
-            <div class="filter"><a href="/canopies/#div-210">210's</a></div>
-            <div class="filter"><a href="/canopies/#div-190">190's</a></div>
-            <div class="filter"><a href="/canopies/#div-170">170's</a></div>
-            <div class="filter"><a href="/canopies/#div-150">150's</a></div>
-            <div class="filter"><a href="/canopies/#div-135">135's</a></div>
-            <div class="filter"><a href="/canopies/#div-120">120's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-top">Top</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-230">230's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-210">210's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-190">190's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-170">170's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-150">150's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-135">135's</a></div>
+            <div class="filter"><a href="/cs-canopies/#div-120">120's</a></div>
 
             </div>
         </div>
