--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -40,6 +40,7 @@
                     <div class="dropdown-content">
                         <a href="/instock-tandem/">In Stock</a>
                         <a href="/cs-tandem/">Coming Soon</a>
+                        <a href="###">Tandem Canopies</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="student-btn" href="/cs-student/">STUDENT</a>
@@ -50,8 +51,10 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="canopies-btn" href="/cs-canopies/">CANOPIES</a>
                     <div class="dropdown-content">
-                        <a href="/instock-canopies/">In Stock</a>
-                        <a href="/cs-canopies/">Coming Soon</a>
+                        <a href="###">All Canopies</a>
+                        <a href="/cs-canopies/">Sabre-3</a>
+                        <a href="###">Pulse</a>
+                        <a href="###">Tandem</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="javelin-btn" href="/cs-javelin/">JAVELIN ODYSSEY</a>
