--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -59,7 +59,8 @@
                     <button id="create-form-confirm_btn" class="btnchanger" onclick=ConfirmChange()>Upload A New Confirmation Report</button>
                     <button id="create-form-picture_btn" class="btnchanger" onclick=PictureChange()>Upload A New Picture</button>
                 </div>
-                <div id='sold-div-change-display' class='none' >
+                <div id="create-upload-div"></div>
+                <div id='sold-div-change-display' class='none'>
                     <form id='form-sold-change' action='/api/api'  method='POST' onsubmit="">
                         {% csrf_token %}
                         <div id="change-display-sold" class="change-display"></div>
