adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -165,12 +165,14 @@
                     {% endfor %}
                 +'</select>'
                 +'<hr>'
+                +'<div id=p1>'
                 +'<select name="picture" id="id_picture">'
                     +'<option value="" selected>Select a Picture</option>'
                     {% for x in pict %}
                         +'<option value="{{ x.id }}">{{ x.key }}</option>'
                     {% endfor %}
                 +'</select>'
+                +'</div>'
                 +'<hr>'
                 +'<button class="submit-new" type="submit">Create New Item</button>'
             +'</form>'
