adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -165,7 +165,7 @@
                     {% endfor %}
                 +'</select>'
                 +'<hr>'
-                +'<div id=p1>'
+                +'<div id="p1">'
                 +'<select name="picture" id="id_picture">'
                     +'<option value="" selected>Select a Picture</option>'
                     {% for x in pict %}
