adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -105,6 +105,7 @@
     <script>
     const TYPE = {sport_rigs: "sport_rigs", tandem: "tandem"}
     function createForm() {
+        document.getElementById('container-main').style.marginLeft = '20%'
         document.getElementById('create-form').className = 'div-form'
         document.getElementById('display-form-btn').className = 'none'
         document.getElementById('container-display').innerHTML = ''
