adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -103,7 +103,7 @@
     </div>
 
     <script>
-    let value_upload_helper = true;
+    let value_upload_helper = false;
     const TYPE = {sport_rigs: "sport_rigs", tandem: "tandem"}
     function createForm() {
         document.getElementById('container-main').style.marginLeft = '35%'
