adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -233,4 +233,5 @@
     <script type="text/javascript" src="{% static 'javascript/build-update-sold.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-update-shipping.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-upload-script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'javascript/build-create-upload.js' %}"></script>
 {% endblock %}
