--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -106,7 +106,8 @@
 
     const TYPE = {sport_rigs: "sport_rigs", tandem: "tandem"}
     function createForm() {
-        document.getElementById('container-main').style.marginLeft = '35%'
+        document.getElementById('container-main').style.marginLeft = '5%'
+        document.getElementById('display-right').style.marginLeft = '170px'
         document.getElementById('container-main').style.maxWidth = '40%'
         document.getElementById('create-form').className = 'div-form'
         document.getElementById('display-form-btn').className = 'none'
