adding upload functions to create form

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -110,6 +110,7 @@
         document.getElementById('display-right').style.marginLeft = '170px'
         document.getElementById('container-main').style.maxWidth = '40%'
         document.getElementById('create-form').className = 'div-form'
+        document.getElementById('change-display').className = 'none'
         document.getElementById('display-form-btn').className = 'none'
         document.getElementById('container-display').innerHTML = ''
         createFormUploadBtns()
