--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -37,7 +37,7 @@
                 <div id="sold-update-btn-group" class="none">
                     <button id="" class="btnchanger" onclick="">Item select</button>
                     <button id="build-create-customer-btn" class="btnchanger" onclick="">Create a New Customer</button>
-                    <button id="" class="btnchanger" onclick="">Customer select</button>
+                    <button id="" class="btnchanger" onclick="openSoldCustomerSelect()">Customer select</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
                     <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
                     <button id="" class="btnchanger" onclick="">Sold info 2 select</button>
@@ -75,6 +75,12 @@
                     <form id='form-price-change' action='/api/api'  method='POST' onsubmit="updateFields(event)">
                         {% csrf_token %}
                         <div id="change-display" class="change-display"></div>
+                    </form>
+                </div>
+                <div id="div-build-sold_customer" class="none">
+                    <form method="POST" id="sold-customer-form" action="/api/sold-data-api/" onsubmit="DataSubmit(event, {{ x.id }})" >
+                        {% csrf_token %}
+                        <div id="sold-change-display" class="sold-change-display"></div>
                     </form>
                 </div>
                 <div id="div-id-change" class="none">
@@ -236,4 +242,5 @@
     <script type="text/javascript" src="{% static 'javascript/build-update-shipping.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-upload-script.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-create-upload.js' %}"></script>
+    <script type="text/javascript" src="{% static 'javascript/build-sold-customer.js' %}"></script>
 {% endblock %}
