--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -116,6 +116,7 @@
         document.getElementById('display-right').style.marginLeft = '170px'
         document.getElementById('container-main').style.maxWidth = '40%'
         document.getElementById('create-form').className = 'div-form'
+        closeSoldDiv()
         closeFields()
         document.getElementById('display-form-btn').className = 'none'
         document.getElementById('container-display').innerHTML = ''
