--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -17,14 +17,16 @@
                             <img src="{% static '' %}{{ x.picture.key }}" height="140" width="212">
                         </div>
                         <div class="container-right">
-                            <p class="color-vector">{{ x.name }}</p>
+                            <p class="color-vector">{{ x.name.name }}</p>
                             <p class="color-vector">Serial #{{ x.serial_number }}</p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-vector">{{ x.size }}</p>
+                            {% if x.size %}
+                                <p class="color-vector">{{ x.size.size }}</p>
+                            {% endif %}
                             <div class="description">{{ x.description }}</div>
                             <p class="price-vector">${{ x.price }}</p>
                             {% if x.in_stock %}
