--- a/frontend/templates/javelin.html
+++ b/frontend/templates/javelin.html
@@ -41,7 +41,7 @@
                                     <p>{{ x.due_date }}</p>
                                 {% endif %}
                             {% endif %}
-                            {% if size %}
+                            {% if x.size %}
                                 <p class="color-javelin">{{ x.size.size }}</p>
                             {% endif %}
                             {% if x.description %}
