mobile view for frontpage

--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -324,13 +324,11 @@ a {
 
 }
 
-.open-mobile-nav-btn {
-    display: none;
-}
+
 
 @media screen and (max-width: 900px) {
 
-    .open-mobile-nav-btn {
+    #open-mobile-nav-btn {
         display: flex;
     }
 
