--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -16,7 +16,7 @@
   <div id="nav-home" class="nav-container"  {% block js %}{% endblock %} >
       <button class="none" id="nav-button" onclick="NavButton()"><p>NAVIGATION</p></button>
       <button class="none" id="close-mobile-nav-button" onclick="closeNavButton()">Close</button>
-      <button class="open-mobile-nav-button" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
+      <button class="none" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
 
         <div class="left-nav" id="left-nav">
             <div class="logo" id="logo-div"><img src="{% static 'images/logo.png' %}"></div>
