mobile view for frontpage

--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -324,11 +324,15 @@ a {
 
 }
 
+.open-mobile-nav-button {
+    display: none;
+}
+
 
 
 @media screen and (max-width: 900px) {
 
-    #open-mobile-nav-btn {
+    .open-mobile-nav-btn {
         display: flex;
     }
 
