--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+    <button class="open-mobile-nav-btn" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
     <main>
     <div class="main-container">
         <div class="main-left">
