--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="{% static 'css/nav-styles.css' %}">
     {% block title %}{% endblock %}
 </head>
-<button class="none" id="open-mobile-nav-button" onclick="openNavButton()">Open</button>
-<body onresize="pageSizer()" onscroll="{% block scroll %}{% endblock %}" >
+
+<body onload="pageSizer()" onresize="pageSizer()" onscroll="{% block scroll %}{% endblock %}" >
 
   <div id="nav-home" class="nav-container"  {% block js %}{% endblock %} >
       <button class="none" id="nav-button" onclick="NavButton()"><p>NAVIGATION</p></button>
