--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -328,6 +328,11 @@ a {
     display: none;
     }
 
+.close-mobile-nav-btn {
+    display: flex;
+    width: 100px;
+}
+
 @media screen and (max-width: 900px) {
 
 
