--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -336,51 +336,61 @@ a {
 
 @media screen and (max-width: 900px) {
 
-
+    .close-mobile-nav-btn {
+        position: sticky;
+        top: 120px;
+        left: 38%;
+    }
 
     .logo {
         display: none;
     }
 
     .searchbar {
+        display: flex;
         position: absolute;
-        margin: 0;
-        top: 100px;
-        left: 0px;
+        top: 500px;
+        left: -100px;
+    }
+
+    .search-btn {
+        display: flex;
+        position: absolute;
+        top: 540px;
+        left: -35px;
     }
 
     .left-nav {
         display: flex;
+        text-align: center;
         margin: 0;
     }
 
      /* The Overlay (background) */
     .nav-container {
         display: none;
-      /* Height & width depends on how you want to reveal the overlay (see JS below) */
+      /* Height  width depends on how you want to reveal the overlay (see JS below) */
       height: 100%;
+        width: auto;
       position: fixed; /* Stay in place */
       z-index: 1; /* Sit on top */
       background-color: rgb(0,0,0); /* Black fallback color */
       background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
       overflow-x: hidden; /* Disable horizontal scroll */
-      transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+
     }
 
     /* Position the content inside the overlay */
     .links {
-        margin-left: 35%;
-      position: relative;
-      display: grid;
-      top: 25%; /* 25% from the top */
-      justify-items: center; /* Centered text/links */
-      margin-top: 0px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+          display: grid;
+        transform: translate(110%, 50%);
+          margin: 0px;
+        justify-items: center;
     }
 
-    /* The navigation links inside the overlay */
+
     .links a {
       padding: 8px;
-
       text-decoration: none;
       font-size: 12px;
       color: #818181;
