--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -327,20 +327,24 @@ a {
 .open-mobile-nav-btn {
     display: flex;
     width: 100px;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 10px;
+    left: 10px;
     }
 
 .close-mobile-nav-btn {
     display: flex;
+    position: absolute;
     width: 100px;
+    top: 120px;
+    left: 38%;
 }
 
 @media screen and (max-width: 900px) {
 
     .close-mobile-nav-btn {
-        position: sticky;
-        position: -webkit-sticky;
-        top: 120px;
-        left: 38%;
+
     }
 
     .logo {
